fixed text overflow for first flat grid element for screens less then 1125px

--- a/style.css
+++ b/style.css
@@ -152,6 +152,12 @@ h3 {
     }
 }
 
+@media (max-width: 1125px)  {
+    #grid-floats .grid-item:first-child p {
+        overflow: scroll
+       }
+   }
+
 @media (min-width: 600px) and (max-width: 1024px) {
     #grid-flex .grid-item  {
         min-width: 30%;
